--- a/src/Makefile
+++ b/src/Makefile
@@ -23,11 +23,14 @@ fd.o : fd.hpp coord.hpp fd.cpp
 fields.o : fields.hpp coord.hpp cartesian.hpp fields.cpp
 	$(CC) $(CFLAGS) fields.cpp
 
-friction.o : block.hpp cartesian.hpp fd.hpp fields.hpp friction.hpp interface.hpp friction.cpp
+friction.o : block.hpp cartesian.hpp fd.hpp fields.hpp friction.hpp interface.hpp load.hpp friction.cpp
 	$(CC) $(CFLAGS) friction.cpp
 
 interface.o : block.hpp boundary.hpp cartesian.hpp coord.hpp fields.hpp interface.hpp surface.hpp interface.cpp
 	$(CC) $(CFLAGS) interface.cpp
+
+load.o : load.hpp load.cpp
+	$(CC) $(CFLAGS) load.cpp
 
 main.o : problem.hpp main.cpp
 	$(CC) $(CFLAGS) main.cpp
@@ -53,7 +56,7 @@ slipweak.o : block.hpp cartesian.hpp fd.hpp fields.hpp friction.hpp interface.hp
 surface.o : coord.hpp surface.hpp surface.cpp
 	$(CC) $(CFLAGS) surface.cpp
 
-fdfault : block.o boundary.o cartesian.o coord.o domain.o fd.o fields.o friction.o interface.o main.o material.o outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o
+fdfault : block.o boundary.o cartesian.o coord.o domain.o fd.o fields.o friction.o interface.o load.o main.o material.o outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o
 	$(CC) -o $(EXEC) block.o boundary.o cartesian.o coord.o domain.o \
-		fd.o fields.o friction.o interface.o main.o material.o \
+		fd.o fields.o friction.o interface.o load.o main.o material.o \
 		outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o
