--- a/problems/test1d.in
+++ b/problems/test1d.in
@@ -1,5 +1,5 @@
 [fdfault.problem]
-10
+800
 0
 0
 0.3
@@ -9,13 +9,13 @@
 [fdfault.domain]
 2
 2
-402 401 1
+602 801 1
 2 1 1
-201 201
-401
+301 301
+801
 1
 1
-locked
+slipweak
 4
 
 [fdfault.fields]
@@ -23,9 +23,9 @@ elastic
 0. 0. 0.
 
 [fdfault.block000]
-1. 1. 1.
+2.67 32.04 32.04
 0. 0.
-0.5 1.
+3. 8.
 absorbing
 none
 absorbing
@@ -36,9 +36,9 @@ none
 none
 
 [fdfault.block100]
-1. 1. 1.
-0.5 0.
-0.5 1.
+2.67 32.04 32.04
+3. 0.
+3. 8.
 none
 absorbing
 absorbing
@@ -56,25 +56,19 @@ none
 
 [fdfault.friction]
 2
-constant 0. 0.5 0.125 0. 1. 0. 0. 0.
-gaussian 0. 0.5 0.2 0. 1. 0. 0. 0. 
+constant 0. 0. 0.125 0. 1. -120. 70. 0.
+gaussian 0. 4. 1.5 0. 1. 0. 11.6 0. 
 
 [fdfault.slipweak]
 0.4
-0.7
-0.6
+0.677
+0.525
 
 [fdfault.outputlist]
 test
 vy
-0 200 1
-150 251 1
-150 250 1
+0 800 1
+0 602 1
+0 801 1
 0 1 1
-test2
-sxx
-0 10 1
-100 100 1
-100 100 1
-0 0 1
 
