--- a/problems/test1d.in
+++ b/problems/test1d.in
@@ -1,5 +1,7 @@
 [fdfault.problem]
-10
+test
+data/
+100
 0
 0
 0.3
@@ -9,13 +11,12 @@
 [fdfault.domain]
 2
 2
-602 801 1
-2 1 1
-301 301
+601 801 1
+1 1 1
+601
 801
 1
-1
-slipweak
+0
 4
 
 [fdfault.fields]
@@ -25,9 +26,9 @@ elastic
 [fdfault.block000]
 2.67 32.04 32.04
 0. 0.
-3. 8.
+6. 8.
 absorbing
-none
+absorbing
 absorbing
 absorbing
 none
@@ -60,15 +61,21 @@ constant 0. 0. 0.125 0. 1. -120. 70. 0.
 gaussian 0. 4. 1.5 0. 1. 0. 11.6 0. 
 
 [fdfault.slipweak]
-10000.
+0.4
 0.677
 0.525
 
 [fdfault.outputlist]
 test
-vy
+vx
 0 800 1
-0 602 1
+0 601 1
+0 801 1
+0 1 1
+test2
+sxx
+0 800 1
+0 601 1
 0 801 1
 0 1 1
 
