added rupture front

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,9 +5,9 @@ LFLAGS=
 EFLAGS=-O3
 EXEC=../fdfault
 
-fdfault : block.o boundary.o cartesian.o coord.o domain.o fd.o fields.o friction.o front.o interface.o load.o main.o material.o outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o utilities.o
+fdfault : block.o boundary.o cartesian.o coord.o domain.o fd.o fields.o friction.o front.o frontlist.o interface.o load.o main.o material.o outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o utilities.o
 	$(CC) $(EFLAGS) $(LFLAGS) $(IFLAGS) -o $(EXEC) block.o boundary.o cartesian.o coord.o domain.o \
-		fd.o fields.o friction.o front.o interface.o load.o main.o material.o \
+		fd.o fields.o friction.o front.o frontlist.o interface.o load.o main.o material.o \
 		outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o utilities.o
 
 block.o : block.hpp boundary.hpp cartesian.hpp coord.hpp fd.hpp material.hpp surface.hpp block.cpp
@@ -34,8 +34,11 @@ fields.o : fields.hpp coord.hpp cartesian.hpp fields.cpp
 friction.o : block.hpp cartesian.hpp fd.hpp fields.hpp friction.hpp interface.hpp load.hpp friction.cpp
 	$(CC) $(CFLAGS) friction.cpp
 
-front.o : cartesian.hpp fields.hpp front.hpp interface.hpp utilities.h front.cpp
+front.o : cartesian.hpp domain.hpp fields.hpp front.hpp interface.hpp utilities.h front.cpp
 	$(CC) $(CFLAGS) front.cpp
+
+frontlist.o : domain.hpp front.hpp frontlist.hpp frontlist.cpp
+	$(CC) $(CFLAGS) frontlist.cpp
 
 interface.o : block.hpp boundary.hpp cartesian.hpp coord.hpp fields.hpp interface.hpp surface.hpp interface.cpp
 	$(CC) $(CFLAGS) interface.cpp
@@ -55,7 +58,7 @@ outputlist.o : outputlist.hpp outputunit.hpp outputlist.cpp
 outputunit.o : outputunit.hpp utilities.h outputunit.cpp
 	$(CC) $(CFLAGS) outputunit.cpp
 
-problem.o : domain.hpp outputlist.hpp problem.hpp rk.hpp problem.cpp
+problem.o : domain.hpp outputlist.hpp frontlist.hpp problem.hpp rk.hpp problem.cpp
 	$(CC) $(CFLAGS) problem.cpp
 
 rk.o : rk.hpp rk.cpp
