--- a/src/Makefile
+++ b/src/Makefile
@@ -5,10 +5,10 @@ LFLAGS=
 EFLAGS=-O3
 EXEC=../fdfault
 
-fdfault : block.o boundary.o cartesian.o coord.o domain.o fd.o fields.o friction.o front.o frontlist.o interface.o load.o main.o material.o outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o utilities.o
+fdfault : block.o boundary.o cartesian.o coord.o domain.o fd.o fields.o friction.o front.o frontlist.o interface.o load.o main.o material.o outputlist.o outputunit.o pert.o problem.o rk.o slipweak.o swparam.o surface.o utilities.o
 	$(CC) $(EFLAGS) $(LFLAGS) $(IFLAGS) -o $(EXEC) block.o boundary.o cartesian.o coord.o domain.o \
 		fd.o fields.o friction.o front.o frontlist.o interface.o load.o main.o material.o \
-		outputlist.o outputunit.o problem.o rk.o slipweak.o surface.o utilities.o
+		outputlist.o outputunit.o pert.o problem.o rk.o slipweak.o swparam.o surface.o utilities.o
 
 block.o : block.hpp boundary.hpp cartesian.hpp coord.hpp fd.hpp material.hpp surface.hpp block.cpp
 	$(CC) $(CFLAGS) block.cpp
@@ -43,7 +43,7 @@ frontlist.o : domain.hpp front.hpp frontlist.hpp frontlist.cpp
 interface.o : block.hpp boundary.hpp cartesian.hpp coord.hpp fields.hpp interface.hpp surface.hpp interface.cpp
 	$(CC) $(CFLAGS) interface.cpp
 
-load.o : load.hpp load.cpp
+load.o : load.hpp pert.hpp load.cpp
 	$(CC) $(CFLAGS) load.cpp
 
 main.o : problem.hpp main.cpp
@@ -58,14 +58,20 @@ outputlist.o : outputlist.hpp outputunit.hpp outputlist.cpp
 outputunit.o : outputunit.hpp utilities.h outputunit.cpp
 	$(CC) $(CFLAGS) outputunit.cpp
 
+pert.o : pert.hpp pert.cpp
+	$(CC) $(CFLAGS) pert.cpp
+
 problem.o : domain.hpp outputlist.hpp frontlist.hpp problem.hpp rk.hpp problem.cpp
 	$(CC) $(CFLAGS) problem.cpp
 
 rk.o : rk.hpp rk.cpp
 	$(CC) $(CFLAGS) rk.cpp
 
-slipweak.o : block.hpp cartesian.hpp fd.hpp fields.hpp friction.hpp interface.hpp slipweak.hpp slipweak.cpp
+slipweak.o : block.hpp cartesian.hpp fd.hpp fields.hpp friction.hpp interface.hpp swparam.hpp slipweak.hpp slipweak.cpp
 	$(CC) $(CFLAGS) slipweak.cpp
+
+swparam.o : pert.hpp swparam.hpp swparam.cpp
+	$(CC) $(CFLAGS) swparam.cpp
 
 surface.o : coord.hpp surface.hpp surface.cpp
 	$(CC) $(CFLAGS) surface.cpp
