fixed some problems with the new location of the python module, small changes to documentation makefile and README

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,9 @@
-docs: userguide.tex
+## userguide.pdf : Create PDF documentation (same as make with no arguments)
+userguide.pdf: userguide.tex
 	pdflatex userguide.tex
 	pdflatex userguide.tex
-	rm userguide.aux userguide.log userguide.toc
+	rm -f userguide.aux userguide.log userguide.toc
+
+.PHONY : help
+help : Makefile
+	@sed -n 's/^##//p' $<
